Add texts to index.html

--- a/index.html
+++ b/index.html
@@ -6,46 +6,64 @@
   </head>
   <body>
     <div class="header">
-      <div class="title">Omnifit</div>
+      <h2 class="title">Omnifit</h2>
       <div class="links">
         <ul>
-          <li>header link one</li>
-          <li>header link two</li>
-          <li>header link three</li>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
         </ul>
       </div>
     </div>
 
     <div class="container">
-      <div class="stuff">
-        <div class="bigtext"></div>
-        <div class="smalltext"></div>
-        <button></button>
+      <div class="main">
+        <h1 class="main-text">This website is indeed awesome</h1>
+        <p class="text">
+          This website has some subtext that goes here under the main title.
+          It's smaller font and the color is lower contrast
+        </p>
+        <button>Sign up</button>
       </div>
-      <img src="" />
+      <img src="" alt="placeholder image" />
     </div>
 
-    <div class="information">
-      <div class="text"></div>
-      <div class="grid">
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+    <h1 class="info">Some random information.</h1>
+    <div class="container">
+      <div class="item">
+        <img class="item-img" alt="image" />
+        <p class="item-info">Strength</p>
+      </div>
+      <div class="item">
+        <img class="item-img" alt="image" />
+        <p class="item-info">Flexibility</p>
+      </div>
+      <div class="item">
+        <img class="item-img" alt="image" />
+        <p class="item-info">Mobility</p>
+      </div>
+      <div class="item">
+        <img class="item-img" alt="image" />
+        <p class="item-info">Agility</p>
       </div>
     </div>
 
     <div class="quote">
-      <p></p>
-      <p></p>
+      <p>
+        It is a shame for a man to grow old without seeing the beauty and
+        strength of which his body is capable.
+      </p>
+      <p>Socrates, Greek philosopher</p>
     </div>
 
-    <div class="action">
-      <div class="bigtext"></div>
-      <div class="smalltext"></div>
+    <div class="container">
+      <h3 class="action">Call to action! It's time!</h3>
+      <p class="">
+        Sign up for our product by clicking that button right over there!
+      </p>
       <button>Sign up</button>
     </div>
 
-    <div class="footer">Copyright @ The Odin Project 2024</div>
+    <div class="footer">Copyright ☺ The Odin Project 2024</div>
   </body>
 </html>
