Add CSS and images to landing page

--- a/index.html
+++ b/index.html
@@ -3,48 +3,76 @@
   <head>
     <meta charset="UTF-8" />
     <title>Omnifit</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="header">
-      <h2 class="title">Omnifit</h2>
-      <div class="links">
+      <div class="head">
+        <h2 class="title">Omnifit</h2>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
-    </div>
-
-    <div class="container">
       <div class="main">
-        <h1 class="main-text">This website is indeed awesome</h1>
-        <p class="text">
-          This website has some subtext that goes here under the main title.
-          It's smaller font and the color is lower contrast
-        </p>
-        <button>Sign up</button>
+        <div class="text">
+          <h1 class="main-text">This website is indeed awesome</h1>
+          <p>
+            This website has some subtext that goes here under the main title.
+            It's smaller font and the color is lower contrast
+          </p>
+          <button>Sign up</button>
+        </div>
+        <img
+          src="img/back.png"
+          alt="statue of a man with his back turned"
+          class="landing-image"
+        />
       </div>
-      <img src="" alt="placeholder image" />
     </div>
 
     <h1 class="info">Some random information.</h1>
     <div class="container">
       <div class="item">
-        <img class="item-img" alt="image" />
-        <p class="item-info">Strength</p>
+        <img
+          class="item-img"
+          src="img/strength.jpeg"
+          alt="man doing bicep curls"
+        />
+        <p class="item-info">
+          Strength — Physical strength is the measure of an individual's
+          exertion of force on physical objects.
+        </p>
       </div>
       <div class="item">
-        <img class="item-img" alt="image" />
-        <p class="item-info">Flexibility</p>
+        <img
+          class="item-img"
+          src="img/flexibility.jpeg"
+          alt="woman stretching"
+        />
+        <p class="item-info">
+          Flexibility — defined as the range of motion of muscle and connective
+          tissues at a joint or group of joints.
+        </p>
       </div>
       <div class="item">
-        <img class="item-img" alt="image" />
-        <p class="item-info">Mobility</p>
+        <img class="item-img" src="img/mobility.jpeg" alt="woman stretching" />
+        <p class="item-info">
+          Mobility — refers to the ability to move joints and use muscles easily
+          and comfortably.
+        </p>
       </div>
       <div class="item">
-        <img class="item-img" alt="image" />
-        <p class="item-info">Agility</p>
+        <img
+          class="item-img"
+          src="img/agility.jpg"
+          alt="man doing agility training"
+        />
+        <p class="item-info">
+          Agility — Agility combines speed, balance, strength and body control
+          in a single movement.
+        </p>
       </div>
     </div>
 
@@ -53,14 +81,17 @@
         It is a shame for a man to grow old without seeing the beauty and
         strength of which his body is capable.
       </p>
-      <p>Socrates, Greek philosopher</p>
+      <p>-Socrates, Greek philosopher</p>
     </div>
 
-    <div class="container">
-      <h3 class="action">Call to action! It's time!</h3>
-      <p class="">
-        Sign up for our product by clicking that button right over there!
-      </p>
+    <div class="container-2">
+      <div>
+        <h3 class="action">Call to action! It's time!</h3>
+        <p class="action-text">
+          Sign up for our product by clicking that button right over there!
+        </p>
+      </div>
+
       <button>Sign up</button>
     </div>
 
